# rkc-cli

./: .bumpversion.cfg  .envrc.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: ideas.md
src/rkc_cli/: cli.py  cookies.py  driver.py  fs.py
src/rkc_cli/forum/: __init__.py  posts.j2
